--- a/index.html
+++ b/index.html
@@ -1,12 +1,124 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>productivityparty.lol</title>
+<title>Page Title</title>
 </head>
 <body>
-
 <h1>productivityparty.lol</h1>
-<p>:)</p>
+
+<h2>⏳ Schedule:</h2>
+<p>[05:45 AM] - All selected students arrive at the party which is held at a specific location on campus</p>
+</p>06:00 AM to 07:30 AM - Work Interval [90 minutes] </p>
+</p>07:30 AM to 07:40 AM - Break [10 minutes]</p>
+</p>07:40 AM to 09:10 AM - Work Interval [90 minutes]</p>
+</p>09:10 AM to 09:20 AM - Break [10 minutes]</p>
+</p>09:20 AM to 10:50 AM - Work Interval [90 minutes]</p>
+</p>10:50 AM to 11:00 AM - Break [10 minutes]</p>
+</p>11:00 AM to 12:00 PM - Work Interval [90 minutes]</p>
+</p>[12:00 PM] - End of Productivity Party 🎉</p>
+
+<h2>📜 Rules for the Productivity Party :</h2>
+<ol>
+<h3> <li>Age Requirement:- </li></h3>
+
+</p>Participants must be at least 21 years old to participate.</p>
+
+<h3> <li>Arrival Time:- </li></h3>
+</p>Be at the event location by 5:45 AM.</p>
+
+<h3> <li>Work Intervals:- </li></h3>
+</p>Complete 90-minute work sessions without interruptions. The final work session will be 60 minutes.</p>
+
+<h3> <li>Silence During Work:- </li></h3>
+</p>No talking is allowed during work intervals.</p>
+
+<h3> <li>Remain Seated:- </li></h3>
+</p>Participants must stay seated during work intervals.</p>
+
+<h3> <li>Phone Usage:- </li></h3>
+</p>Phones must be handed in before the event starts and are only to be used during breaks.</p>
+
+<h3> <li>Timely Return from Breaks:- </li></h3> 
+</p>Participants must resume work immediately after each break.</p>
+
+<h3> <li> Leaving the party:- </li></h3> 
+</p> :( </p>
+
+</ol> 
+
+<h2>❌ Penalties:</h2>
+
+<p> All guests start with 100 points. Points are deducted for the following reasons:<p>
+
+<p>[-5 points]<p>
+
+<p><i>- Talking During Work Interval: Any type of speaking during work intervals </i><p>
+
+<p><i>- Standing Up: Standing during work intervals</i><p>
+
+<p>[-10 points]<p>
+
+<p><i>- Late Return from break: Coming back late from the break</i><p>
+
+<p><i>- Causing Distractions: Engaging in distracting behaviors like shuffling through backpack during the work interval, etc. </i><p>
+
+<p>[-15 points]<p>
+
+<p><i>- Delay After Breaks: Not resuming work immediately after the breaks</i><p>
+
+<p><i>- Unauthorized Phone Usage: Using phone outside of designated break times</i><p>
+
+<p>[-20 points]<p>
+
+<p><i>- Being Late: Arriving after 5:45 AM </i><p>
+
+<p> [-30 point] <p>
+<p><i>- Leaving the party: Exiting the party room during work interval </i><p>
+
+
+<mark>The participant with the highest points at the end of the session wins the $100 prize. Remember, the aim is to stay focused as well as productive!</mark>
+
+<h2>🤝 Tie-Breaker Procedure:</h2>
+
+<p>In the event of a tie where two or more participants finish with the same highest point total, the following tie-breaker procedure will be implemented:<p>
+
+<p> 1. Inspection of Work:<p>
+
+<p> The participants who are not in the tie will be asked to review the work completed by the tied participants during the Productivity Party. This inspection is to ensure fairness and transparency in assessing the quality and quantity of work done.<p>
+
+<p> 2. Voting for the Winner:<p>
+<p> After inspecting the work, the non-tied participants will vote to determine the winner. Each participant gets one vote and cannot vote for themselves.<p>
+
+<p>3. Final Decision:<p>
+
+<p>he participant among the tied individuals who receives the most votes from their peers will be declared the winner of the Productivity Party and awarded the $100 prize.<p>
+
+<p> <mark>This tie-breaker process is designed to encourage not only productivity but also the quality of work, ensuring that the most deserving participant wins in the case of a tie.<mark><p>
+
+<h2>👨‍⚖️ Referee's Role </h2>
+<p>At the Productivity Party, a designated referee plays a crucial role in managing the event. Here are the key responsibilities of the referee:<p>
+
+<p> - Timing: The referee is responsible for keeping track of time, ensuring that all sessions and breaks start and end as per the schedule.<p>
+
+<p> - Initiating Sessions: The referee will officially start each work session and announce the beginning of breaks. Participants must follow these cues strictly.<p>
+
+<p> - Monitoring Rules: The referee will monitor participants to ensure adherence to the rules. This includes checking for punctuality, ensuring silence during work sessions, and observing break durations.<p>
+
+<p> - Points Deduction: The referee has the authority to deduct points for any rule violations. Their decisions on point deductions are final and must be respected by all participants.<p>
+
+<p> - Handling Disputes: In case of any disputes or uncertainties about the rules, the referee’s decision will be considered final.<p>
+
+<p> -Tie-Breaker Supervision: In the event of a tie, the referee will oversee the inspection of work and the voting process, ensuring that it is carried out fairly and transparently.<p>
+
+<p><mark>The role of the referee is to ensure that the Productivity Party runs smoothly and that the competition is fair and enjoyable for all participants. Their decisions are made in the best interest of maintaining the integrity and spirit of the event.<mark><p>
+
+<small>Note: Productivity Party is an independent academic initiative and is not affiliated with Columbia University as an official program.</small>
+
+ <footer>
+        <p><a href="Terms and Conditions.html">Terms and Conditions</a></p>
+    </footer>
 
 </body>
 </html>
+
+
