--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <body>
 <h1>productivityparty.lol</h1>
 
+
+    
+<a href="https://forms.gle/ujEtCpraLhbkiHBU9" target="_blank">Apply to Attend the Party</a>
+  
+
+
 <h2>⏳ Schedule:</h2>
 <p>[05:45 AM] - All selected students arrive at the party which is held at a specific location on campus</p>
 </p>06:00 AM to 07:30 AM - Work Interval [90 minutes] </p>
@@ -14,32 +20,35 @@
 </p>09:10 AM to 09:20 AM - Break [10 minutes]</p>
 </p>09:20 AM to 10:50 AM - Work Interval [90 minutes]</p>
 </p>10:50 AM to 11:00 AM - Break [10 minutes]</p>
-</p>11:00 AM to 12:00 PM - Work Interval [90 minutes]</p>
+</p>11:00 AM to 12:00 PM - Work Interval [60 minutes]</p>
 </p>[12:00 PM] - End of Productivity Party 🎉</p>
 
 <h2>📜 Rules for the Productivity Party :</h2>
 <ol>
 <h3> <li>Age Requirement:- </li></h3>
 
-</p>Participants must be at least 21 years old to participate.</p>
+</p>Participants must be at least 21 years old.</p>
+<h3> <li>Cover Fee:- </li></h3>
+
+</p> Guests are expected to pay the $20 cover fee to participate in the party.</p>
 
 <h3> <li>Arrival Time:- </li></h3>
-</p>Be at the event location by 5:45 AM.</p>
+</p>Arrive at the location by 5:45 AM.</p>
 
 <h3> <li>Work Intervals:- </li></h3>
-</p>Complete 90-minute work sessions without interruptions. The final work session will be 60 minutes.</p>
+</p>Complete uninterrupted 90-minute work sessions. The final session is 60 minutes.</p>
 
 <h3> <li>Silence During Work:- </li></h3>
-</p>No talking is allowed during work intervals.</p>
+</p>Maintain silence during work intervals.</p>
 
 <h3> <li>Remain Seated:- </li></h3>
 </p>Participants must stay seated during work intervals.</p>
 
 <h3> <li>Phone Usage:- </li></h3>
-</p>Phones must be handed in before the event starts and are only to be used during breaks.</p>
+</p>Phones must be placed in a clear bin before the party starts and are only to be used during breaks.</p>
 
 <h3> <li>Timely Return from Breaks:- </li></h3> 
-</p>Participants must resume work immediately after each break.</p>
+</p>Resume work immediately post-break.</p>
 
 <h3> <li> Leaving the party:- </li></h3> 
 </p> :( </p>
@@ -72,7 +81,7 @@
 
 <p><i>- Being Late: Arriving after 5:45 AM </i><p>
 
-<p> [-30 point] <p>
+<p> [-30 points] <p>
 <p><i>- Leaving the party: Exiting the party room during work interval </i><p>
 
 
@@ -84,14 +93,14 @@
 
 <p> 1. Inspection of Work:<p>
 
-<p> The participants who are not in the tie will be asked to review the work completed by the tied participants during the Productivity Party. This inspection is to ensure fairness and transparency in assessing the quality and quantity of work done.<p>
+<p> Non-tied participants will review the work of those in the tie. This inspection is to ensure fairness and transparency in assessing the quality and quantity of work done.<p>
 
 <p> 2. Voting for the Winner:<p>
 <p> After inspecting the work, the non-tied participants will vote to determine the winner. Each participant gets one vote and cannot vote for themselves.<p>
 
 <p>3. Final Decision:<p>
 
-<p>he participant among the tied individuals who receives the most votes from their peers will be declared the winner of the Productivity Party and awarded the $100 prize.<p>
+<p>The participant among the tied individuals who receives the most votes from their peers will be declared the winner of the Productivity Party and awarded the $100 prize.<p>
 
 <p> <mark>This tie-breaker process is designed to encourage not only productivity but also the quality of work, ensuring that the most deserving participant wins in the case of a tie.<mark><p>
 
@@ -108,11 +117,15 @@
 
 <p> - Handling Disputes: In case of any disputes or uncertainties about the rules, the referee’s decision will be considered final.<p>
 
-<p> -Tie-Breaker Supervision: In the event of a tie, the referee will oversee the inspection of work and the voting process, ensuring that it is carried out fairly and transparently.<p>
+<p> - Tie-Breaker Supervision: In the event of a tie, the referee will oversee the inspection of work and the voting process, ensuring that it is carried out fairly and transparently.<p>
 
 <p><mark>The role of the referee is to ensure that the Productivity Party runs smoothly and that the competition is fair and enjoyable for all participants. Their decisions are made in the best interest of maintaining the integrity and spirit of the event.<mark><p>
 
+    <p> <a href="https://forms.gle/ujEtCpraLhbkiHBU9" target="_blank">Apply to Attend the Party</a><p>
+
+
 <small>Note: Productivity Party is an independent academic initiative and is not affiliated with Columbia University as an official program.</small>
+
 
  <footer>
         <p><a href="Terms and Conditions.html">Terms and Conditions</a></p>
