--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 <body>
 <h1>productivityparty.lol</h1>
 
+<!-- What are you doing here? -->
 
-    
+<!--Sir, you need to leave! -->
+
+
 <a href="https://forms.gle/ujEtCpraLhbkiHBU9" target="_blank">Apply to Attend the Party</a>
   
 
@@ -131,7 +134,10 @@
         <p><a href="Terms and Conditions.html">Terms and Conditions</a></p>
     </footer>
 
+<!--smh 😪 -->
+
 </body>
 </html>
+
 
 
