--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <p> <a href="https://forms.gle/ujEtCpraLhbkiHBU9" target="_blank">Apply to Attend the Party</a><p>
 
-
+<IMG SRC="image.gif">
 <small>Note: Productivity Party is an independent academic initiative and is not affiliated with Columbia University as an official program.</small>
 
 
