--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>You're Invited to the Productivity Party </title>
 </head>
 <body>
 <h1>productivityparty.lol</h1>
