--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8JLPSDQ8TB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8JLPSDQ8TB');
+</script>
+
 <title>You're Invited to the Productivity Party </title>
 </head>
+
+
+<div align='center'><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=161981&s=1' border='0' alt=''></a><br / ><small><a href='' title=""></a></small></div>
+
+
 <body>
 <h1>productivityparty.lol</h1>
 
@@ -14,6 +29,7 @@
 <a href="https://forms.gle/ujEtCpraLhbkiHBU9" target="_blank">Apply to Attend the Party</a>
   
 
+<p>A productivity marathon among 6 students all placed at one large table with 1 winner who will win the cash prize of $100. Below are essential details including the event schedule, rules, penalties, tie-breaker procedures, and the referee's role. Please read thoroughly to prepare for this exciting challenge and your chance to win $100.</p>
 
 <h2>⏳ Schedule:</h2>
 <p>[05:45 AM] - All selected students arrive at the party which is held at a specific location on campus</p>
@@ -135,6 +151,9 @@
     </footer>
 
 <!--smh 😪 -->
+
+<div align='center'><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=161981&s=1' border='0' alt=''></a><br / ><small><a href='' title=""></a></small></div>
+
 
 </body>
 </html>
