--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
 <a href="https://forms.gle/ujEtCpraLhbkiHBU9" target="_blank">Apply to Attend the Party</a>
   
 
-<p>A productivity marathon among 6 students all placed at one large table with 1 winner who will win the cash prize of $100. Below are essential details including the event schedule, rules, penalties, tie-breaker procedures, and the referee's role. Please read thoroughly to prepare for this exciting challenge and your chance to win $100.</p>
+<p>A productivity marathon among 6 guests all placed at one large table with 1 winner who will win the cash prize of $100. Below are essential details including the event schedule, rules, penalties, tie-breaker procedures, and the host's role. Please read thoroughly to prepare for this exciting challenge and your chance to win $100.</p>
+
+<p><i>Note:  The party is BYOB 📚</i></p>
+
+<p>During the focused work intervals, you'll be diving into your own coursework, assignments, and projects. It's your chance to get your work done while surrounded by other motivated students. So, remember to BYOB – Bring Your Own Books 📚.</p>
 
 <h2>⏳ Schedule:</h2>
-<p>[05:45 AM] - All selected students arrive at the party which is held at a specific location on campus</p>
+<p>[05:45 AM] - All selected guests arrive at the party which is held at a specific location on campus</p>
 </p>06:00 AM to 07:30 AM - Work Interval [90 minutes] </p>
 </p>07:30 AM to 07:40 AM - Break [10 minutes]</p>
 </p>07:40 AM to 09:10 AM - Work Interval [90 minutes]</p>
@@ -46,7 +50,7 @@
 <ol>
 <h3> <li>Age Requirement:- </li></h3>
 
-</p>Participants must be at least 21 years old.</p>
+</p>Guests must be at least 21 years old.</p>
 <h3> <li>Cover Fee:- </li></h3>
 
 </p> Guests are expected to pay the $20 cover fee to participate in the party.</p>
@@ -61,7 +65,7 @@
 </p>Maintain silence during work intervals.</p>
 
 <h3> <li>Remain Seated:- </li></h3>
-</p>Participants must stay seated during work intervals.</p>
+</p>Guests must stay seated during work intervals.</p>
 
 <h3> <li>Phone Usage:- </li></h3>
 </p>Phones must be placed in a clear bin before the party starts and are only to be used during breaks.</p>
@@ -104,41 +108,41 @@
 <p><i>- Leaving the party: Exiting the party room during work interval </i><p>
 
 
-<mark>The participant with the highest points at the end of the session wins the $100 prize. Remember, the aim is to stay focused as well as productive!</mark>
+<mark>The guest with the highest points at the end of the session wins the $100 prize. Remember, the aim is to stay focused as well as productive!</mark>
 
 <h2>🤝 Tie-Breaker Procedure:</h2>
 
-<p>In the event of a tie where two or more participants finish with the same highest point total, the following tie-breaker procedure will be implemented:<p>
+<p>In the event of a tie where two or more guests finish with the same highest point total, the following tie-breaker procedure will be implemented:<p>
 
 <p> 1. Inspection of Work:<p>
 
-<p> Non-tied participants will review the work of those in the tie. This inspection is to ensure fairness and transparency in assessing the quality and quantity of work done.<p>
+<p> Non-tied guests will review the work of those in the tie. This inspection is to ensure fairness and transparency in assessing the quality and quantity of work done.<p>
 
 <p> 2. Voting for the Winner:<p>
-<p> After inspecting the work, the non-tied participants will vote to determine the winner. Each participant gets one vote and cannot vote for themselves.<p>
+<p> After inspecting the work, the non-tied guest will vote to determine the winner. Each non-tied guest gets one vote.<p>
 
 <p>3. Final Decision:<p>
 
-<p>The participant among the tied individuals who receives the most votes from their peers will be declared the winner of the Productivity Party and awarded the $100 prize.<p>
+<p>The guest among the tied individuals who receives the most votes from their peers will be declared the winner of the Productivity Party and awarded the $100 prize.<p>
 
-<p> <mark>This tie-breaker process is designed to encourage not only productivity but also the quality of work, ensuring that the most deserving participant wins in the case of a tie.<mark><p>
+<p> <mark>This tie-breaker process is designed to encourage not only productivity but also the quality of work, ensuring that the most deserving guest wins in the case of a tie.<mark><p>
 
-<h2>👨‍⚖️ Referee's Role </h2>
-<p>At the Productivity Party, a designated referee plays a crucial role in managing the event. Here are the key responsibilities of the referee:<p>
+<h2>🎩 Host's Role </h2>
+<p>At the Productivity Party, a designated host plays a crucial role in managing the event. Here are the key responsibilities of the host:<p>
 
-<p> - Timing: The referee is responsible for keeping track of time, ensuring that all sessions and breaks start and end as per the schedule.<p>
+<p> - Timing: The host is responsible for keeping track of time, ensuring that all sessions and breaks start and end as per the schedule.<p>
 
-<p> - Initiating Sessions: The referee will officially start each work session and announce the beginning of breaks. Participants must follow these cues strictly.<p>
+<p> - Initiating Sessions: The host will officially start each work session and announce the beginning of breaks. Guests must follow these cues strictly.<p>
 
-<p> - Monitoring Rules: The referee will monitor participants to ensure adherence to the rules. This includes checking for punctuality, ensuring silence during work sessions, and observing break durations.<p>
+<p> - Monitoring Rules: The host will monitor guests to ensure adherence to the rules. This includes checking for punctuality, ensuring silence during work sessions, and observing break durations.<p>
 
-<p> - Points Deduction: The referee has the authority to deduct points for any rule violations. Their decisions on point deductions are final and must be respected by all participants.<p>
+<p> - Points Deduction: The host has the authority to deduct points for any rule violations. Their decisions on point deductions are final and must be respected by all guests.<p>
 
-<p> - Handling Disputes: In case of any disputes or uncertainties about the rules, the referee’s decision will be considered final.<p>
+<p> - Handling Disputes: In case of any disputes or uncertainties about the rules, the host's decision will be considered final.<p>
 
-<p> - Tie-Breaker Supervision: In the event of a tie, the referee will oversee the inspection of work and the voting process, ensuring that it is carried out fairly and transparently.<p>
+<p> - Tie-Breaker Supervision: In the event of a tie, the host will oversee the inspection of work and the voting process, ensuring that it is carried out fairly and transparently.<p>
 
-<p><mark>The role of the referee is to ensure that the Productivity Party runs smoothly and that the competition is fair and enjoyable for all participants. Their decisions are made in the best interest of maintaining the integrity and spirit of the event.<mark><p>
+<p><mark>The role of the host is to ensure that the Productivity Party runs smoothly and that the competition is fair and enjoyable for all guests. Their decisions are made in the best interest of maintaining the integrity and spirit of the event.<mark><p>
 
     <p> <a href="https://forms.gle/ujEtCpraLhbkiHBU9" target="_blank">Apply to Attend the Party</a><p>
 
