--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p><i>Note:  The party is BYOB 📚</i></p>
 
-<p>During the focused work intervals, you'll be diving into your own coursework, assignments, and projects. It's your chance to get your work done while surrounded by other motivated students. So, remember to BYOB – Bring Your Own Books 📚.</p>
+<p>During the focused work intervals, you'll be diving into your own coursework, assignments, and projects. So, remember to BYOB – Bring Your Own Books.</p>
 
 <h2>⏳ Schedule:</h2>
 <p>[05:45 AM] - All selected guests arrive at the party which is held at a specific location on campus</p>
