--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <h3> <li>Timely Return from Breaks:- </li></h3> 
 </p>Resume work immediately post-break.</p>
 
-<h3> <li> Leaving the party:- </li></h3> 
+<h3> <li> Leaving the Party:- </li></h3> 
 </p> :( </p>
 
 </ol> 
@@ -90,13 +90,11 @@
 
 <p>[-10 points]<p>
 
-<p><i>- Late Return from break: Coming back late from the break</i><p>
-
-<p><i>- Causing Distractions: Engaging in distracting behaviors like shuffling through backpack during the work interval, etc. </i><p>
+<p><i>- Causing Distractions: Refrain from creating noise disturbances such as typing loudly, rustling through belongings, or any other unnecessary and disruptive sounds during work intervals. </i><p>
 
 <p>[-15 points]<p>
 
-<p><i>- Delay After Breaks: Not resuming work immediately after the breaks</i><p>
+<p><i>- Delay After Breaks: Not resuming work immediately after each break</i><p>
 
 <p><i>- Unauthorized Phone Usage: Using phone outside of designated break times</i><p>
 
